--- a/app/src/main/res/layout/fragment_saerch.xml
+++ b/app/src/main/res/layout/fragment_saerch.xml
@@ -8,12 +8,15 @@
     tools:context=".SaerchFragment">
 
 
-    <com.example.k_movie_db.widgets.RcvITem
+    <com.ju.myui.RcvITem
+        android:id="@+id/item1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
         app:Dtext="This is desc"
-        app:Ttext="This is Title" />
+        app:Ttext="This is Title"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <com.example.k_movie_db.widgets.RcvITem
